--- a/base/templates/registration/login.html
+++ b/base/templates/registration/login.html
@@ -9,7 +9,7 @@
     {{ form.as_p }}
     <button type="submit">Log in</button>
 </form>
-<a href="signup-link" href="{% url 'base:signup' %}"></a>
+<a class="signup-link" href="{% url "base:signup" %}">Sign Up</a>
 </div>
 </div>
 {% endblock %}
